# tbtwd-obsidian-mcp

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: vault-dev.agent.md
.github/hooks/: vault-first.json
scripts/: migrate_vault.py
src/tbtwd_obsidian_mcp/: server.py  storage.py
tests/: test_storage.py
